# Code-WCAG-a11y

./: .gitignore  README.md  pyproject.toml  server.py
code_wcag_a11y/: client.py  globals.py  mcp_server.py
code_wcag_a11y/data/indices/wcag-2.1/vector_storage/: default__vector_store.json  docstore.json  index_store.json
code_wcag_a11y/data/indices/wcag-2.2/vector_storage/: default__vector_store.json  docstore.json  index_store.json
code_wcag_a11y/data/processed/: wcag-2.1_preprocessed.json  wcag-2.2_preprocessed.json  wcag_2.1_preprocessed.json  wcag_2.2_preprocessed.json
code_wcag_a11y/data/raw/: benefits_cache.json
code_wcag_a11y/data/wcag_local_index/: chroma.sqlite3
code_wcag_a11y/scripts/: build_index.py  chromadb.py  keyword_search_index.py  preprocess_data.py
code_wcag_a11y/scripts/types/: chunk_types.py  wcag_types.py
code_wcag_a11y/scripts/utils/: cli_utils.py  formatter.py  index.py  keyword_search.py  preprocess.py  scrape_wcag_website.py
code_wcag_a11y/utils/: clean_code.py  formatter.py  logger.py  retrieval.py
data/: preprocess-data.py  wcag-2.2.json  wcag-21.json
data/classes/: chunk_types.py  wcag_types.py
data/storage/: wcag_2.1_preprocessed.json  wcag_2.2_preprocessed.json  wcag_21_preprocessed.json  wcag_22_preprocessed.json
data/utils/: formatter.py  index.py  retrieval.py
wcag_local_index/: chroma.sqlite3
