[project]
name = "a11y-mcp"
version = "0.1.0"
description = "A WCAG assistant using MCP and LlamaIndex that suggest you relevant WCAG techniques for a component you want to make accessible."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastmcp>=2.14.1",
    "llama-index>=0.14.10",
    "llama-index-embeddings-ollama>=0.8.5",
    "llama-index-llms-ollama>=0.9.1",
    "mcp[cli]>=1.25.0",
    "ollama>=0.6.1",
]
